syntax = "proto2";
package verifier;

message Landmark {
    repeated sint32 x = 1 [packed = true];
    repeated sint32 y = 2 [packed = true];
}

// 通用请求
message CommonReq {
    required int32 interface = 1;
    required string apiKey = 2;
    repeated bytes image = 3;
}

message CommonRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;
}

// 注册人员 interface = 10000
message RegisterReq {
    required int32 interface = 1;
    required string apiKey = 2;

    message Person {
        repeated bytes image = 1;
        repeated Landmark landmark = 2;
        required string faceId = 3;
        required string groupId = 4 [default = "watchlist"];
    }
    repeated Person people = 3;
}

message RegisterRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    message FailedInfo {
        required string faceId = 1;
        required string groupId = 2;
        required string message = 3;
    }
    repeated FailedInfo failed = 4;
}

// 搜索人员 interface = 10001
message SearchReq {
    required int32 interface = 1;
    required string apiKey = 2;
    repeated bytes image = 3;
    repeated Landmark landmark = 4;
    required string groupId = 5 [default = "watchlist"];
    required int32 topk = 6;
    required float score = 7 [default = 0.8];
    optional string cameraId = 8;
    optional string imageId = 9;
}

message SearchRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    repeated string faceId = 4;
    repeated float score = 5;
}

// 删除人员 interface = 10002
message DeleteReq {
    required int32 interface = 1;
    required string apiKey = 2;
    required string faceId = 3;
    required string groupId = 4 [default = "watchlist"];
}

// use CommonRes

// 检查注册人员 interface = 10003
message CheckReq {
    required int32 interface = 1;
    required string apiKey = 2;
    required string faceId = 3;
    required string groupId = 4 [default = "watchlist"];
}

// use CommonRes

// 比较人脸 interface = 10004
message CompareReq {
    required int32 interface = 1;
    required string apiKey = 2;
    repeated bytes image = 3;
    repeated Landmark landmark = 4;
}

message CompareRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    required float score = 4;
}

// 检测人脸 interface = 10005
message DetectReq {
    required int32 interface = 1;
    required string apiKey = 2;
    required bytes image = 3;
    required sint32 rows = 4;
    required sint32 cols = 5;
    enum Format {
        MAT = 0;
        YUV = 1;
    }
    required Format format = 6 [default = YUV];
    optional sint32 minfaceSize = 7 [default = 80];
    optional sint32 maxfaceSize = 8 [default = 300];
    optional string field = 9 [default = "normal"];
    optional string imageId = 10;
    optional string cameraId = 11;
    optional string classify = 12[default = "gender,age,hair"];
}


message DetectRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;
    required sint32 detectNums = 4;
    required sint32 trackNums = 5;

    message DetectInfo {
        required sint32 left = 1;
        required sint32 top = 2;
        required sint32 width = 3;
        required sint32 height = 4;
        required sint32 sideFace = 5;
        required sint32 quality = 6;
        required float score = 7;
        required sint32 glasses = 8;
        repeated sint32 x = 9 [packed = true];
        repeated sint32 y = 10 [packed = true];
        required float female = 11;
        required float male = 12;
        required sint32 age = 13;
        required string hair = 14;
    }

    message TrackInfo {
        required sint32 left = 1;
        required sint32 top = 2;
        required sint32 width = 3;
        required sint32 height = 4;
        required sint32 sideFace = 5;
        required sint32 quality = 6;
        required float score = 7;
        required sint32 glasses = 8;
        repeated sint32 x = 9 [packed = true];
        repeated sint32 y = 10 [packed = true];
        required string imageId = 11;
        required fixed64 inTime = 12;
        required fixed64 outTIme = 13;
        required fixed64 bestTIme = 14;
    }

    repeated DetectInfo detect = 6;
    repeated TrackInfo track = 7;
}

// 提取特征 interface = 10006
message FeatureReq {
    required int32 interface = 1;
    required string apiKey = 2;
    repeated bytes image = 3;
    repeated Landmark landmark = 4;
}

message FeatureRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    required sint32 dimension = 4;

    message Feature {
        repeated float x = 1;
    }
    repeated Feature feature = 5;
}

// 预测性别 interface = 10007
// use CommonReq

message GenderRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    message Gender {
        required float Female = 1;
        required float Male = 2;
    }
    repeated Gender gender = 4;
}

// 预测年龄 interface = 10008
// use CommonReq

message AgeRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    repeated string age = 4;
}

// 活体检测 interface = 10009
message AliveReq {
    required int32 interface = 1;
    required string apiKey = 2;

    message LiveMeta {
        required string type = 1;
        required bytes image1 = 2;
        required bytes image2 = 3;
    }
    repeated LiveMeta live = 3;
}

message AliveRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    required string lives = 4;
}

// 行人检测 interface = 10010
message PedestrianReq {
    required int32 interface = 1;
    required string apiKey = 2;
    required bytes image1 = 3;
}

message PedestrianRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    required sint32 personNums = 4;

    message Location {
        required sint32 height = 1;
        required sint32 left = 2;
        required sint32 top = 3;
        required sint32 width = 4;
    }
    repeated Location location = 5;
}

// 预测发型 interface = 10011
// use CommonReq

message HairRes {
    required string requestId = 1;
    required sint32 timeUsed = 2;
    required sint32 errorMessage = 3;

    repeated string hair = 4;
}
